# micropub

./: .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  MCP.md  Makefile  README.md  TUI_DEMO.md  TUI_IMPLEMENTATION.md  WORKFLOW.md  test_tui.sh
.github/workflows/: homebrew.yml  release.yml
docs/: MCP_UPLOAD_TESTING.md  USAGE.md
docs/plans/: 2025-11-27-micropub-cli-design.md  2025-11-27-micropub-cli-implementation.md  2025-11-30-homebrew-release-workflow-design.md  2025-11-30-homebrew-workflow.md  2025-11-30-implementation-summary.md  2025-12-03-mcp-image-upload-design.md  2025-12-04-server-side-drafts-design.md  2025-12-04-server-side-drafts.md
examples/: mcp_simple_test.rs  upstream_counter.rs
src/: auth.rs  client.rs  config.rs  draft.rs  draft_push.rs  lib.rs  main.rs  mcp.rs  media.rs  operations.rs  publish.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: auth_security_tests.rs  client_tests.rs  config_tests.rs  draft_push_tests.rs  draft_tests.rs  integration_test.rs  mcp_tests.rs  media_tests.rs
