[package]
name = "micropub"
version = "0.2.1"
edition = "2021"
authors = ["Harper <harper@nata2.org>"]
description = "Ultra-compliant Micropub CLI for creating, updating, and managing IndieWeb posts"
repository = "https://github.com/harperreed/micropub"
license = "MIT"
keywords = ["micropub", "indieweb", "cli", "blogging"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
url = "2"
dirs = "5"
mime_guess = "2"
oauth2 = "4"
scraper = "0.18"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
regex = "1"
lazy_static = "1.5"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
open = "5"
rmcp = { version = "0.9", features = ["server", "transport-io"] }
schemars = "0.8"
ratatui = "0.28"
crossterm = "0.28"
is-terminal = "0.4"

[dev-dependencies]
mockito = "1"
tempfile = "3"
